--- a/Slovak/main/SecurityAdd.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityAdd.apk/res/values-sk/strings.xml
@@ -52,7 +52,7 @@
     <string name="friday">Piatok</string>
     <string name="friday_short">Pia</string>
     <string name="friday_shortest">Pia</string>
-    <string name="function_close">Vyp</string>
+    <string name="function_close">Vypnuté</string>
     <string name="game_booster">Zrýchlenie hier</string>
     <string name="game_booster_intro">Čo to je</string>
     <string name="game_booster_title">Zrýchlenie</string>
