--- a/Slovak/main/MiuiHome.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiHome.apk/res/values-sk/strings.xml
@@ -302,8 +302,8 @@
     <string name="launcher_search">Vyhľadávanie</string>
     <string name="launcher_search_bar_provider_title">Poskytovateľ vyhľadávania na ploche</string>
     <string name="launcher_search_bar_title">Lišta vyhľadávania</string>
-    <string name="launcher_search_bar_value_disable">Vyp</string>
-    <string name="launcher_search_bar_value_enable">Zap</string>
+    <string name="launcher_search_bar_value_disable">Vypnuté</string>
+    <string name="launcher_search_bar_value_enable">Zapnuté</string>
     <string name="launcher_search_provider_title">Poskytovateľ vyhľadávania na ploche</string>
     <string name="launcher_slide_up_search_provider_title">Poskytovateľ vyhľadávania gesta nahor</string>
     <string name="launcher_slide_up_title">Potiahnutie nahor na ploche</string>
