--- a/Slovak/main/MtkTeleService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MtkTeleService.apk/res/values-sk/strings.xml
@@ -908,8 +908,8 @@ Ak chcete pokračovať, stlačte tlačidlo Vymazať a konvertovať…"</string>
     <string name="mobile_data">"Mobilné dáta: "</string>
     <string name="mobile_data_always_on">Mobilné dáta ponechať vždy aktívne</string>
     <string name="mobile_data_always_on_summary">Vždy ponechávať mobilné dáta aktívne, dokonca aj pri aktívnej sieti Wi‑Fi (na rýchle prepínanie sietí)</string>
-    <string name="mobile_data_off">vyp</string>
-    <string name="mobile_data_on">zap</string>
+    <string name="mobile_data_off">Vypnuté</string>
+    <string name="mobile_data_on">Zapnuté</string>
     <string name="mobile_network_settings_not_available">Nastavenia mobilnej siete nie sú pre tohto používateľa dostupné</string>
     <string name="mobile_networks">Nastavenie mobilnej siete</string>
     <string name="mock_location_app">Vybrať aplikáciu so simulovanou polohou</string>
