--- a/Slovak/main/PackageInstaller.apk/res/values-sk/strings.xml
+++ b/Slovak/main/PackageInstaller.apk/res/values-sk/strings.xml
@@ -10,8 +10,8 @@
     <string name="abc_action_mode_done">Hotovo</string>
     <string name="abc_activity_chooser_view_see_all">Zobraziť všetko</string>
     <string name="abc_activitychooserview_choose_application">Zvoľte aplikáciu</string>
-    <string name="abc_capital_off">ZAP</string>
-    <string name="abc_capital_on">VYP</string>
+    <string name="abc_capital_off">Zapnuté</string>
+    <string name="abc_capital_on">Vypnuté</string>
     <string name="abc_search_hint">Vyhľadať…</string>
     <string name="abc_searchview_description_clear">Vymazať dopyt</string>
     <string name="abc_searchview_description_query">Vyhľadávací dopyt</string>
@@ -577,8 +577,8 @@ Všetky predchádzajúce používateľské údaje budú uložené."</string>
     <string name="usb_audio_disable_routing">Disable USB audio routing</string>
     <string name="usb_audio_disable_routing_summary">Disable automatic routing to USB audio peripherals</string>
     <string name="user_guest">Guest</string>
-    <string name="v7_preference_off">VYP</string>
-    <string name="v7_preference_on">ZAP</string>
+    <string name="v7_preference_off">Vypnuté</string>
+    <string name="v7_preference_on">Zapnuté</string>
     <string name="verify_apps_over_usb_summary">Check apps installed via ADB/ADT for harmful behavior.</string>
     <string name="verify_apps_over_usb_title">Verify apps over USB</string>
     <string name="virus_scan_caller_unknown">Neznámy</string>
